[project]
name = "sgreplay-parser"
version = "0.0.1"
description = "Stormgate replay parser with web UI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "gosunero" }
]
keywords = ["stormgate", "replay", "parser", "esports"]

dependencies = []

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
]

[project.scripts]
sgreplay-parser = "parse_sgreplay:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
